--- a/spread.yaml
+++ b/spread.yaml
@@ -981,6 +981,7 @@ suites:
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
             nested_start_core_vm
+            nested_wait_for_snap_command
         restore-each: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
@@ -1042,6 +1043,7 @@ suites:
             nested_prepare_env
             nested_create_core_vm
             nested_start_core_vm
+            nested_wait_for_snap_command
         restore: |
             #shellcheck source=tests/lib/nested.sh
             . "$TESTSLIB/nested.sh"
