o/hookstate/ctlcmd: add a simple whitelist of allowed interfaces for --pid feature

--- a/tests/main/snapctl-is-connected-pid/test-snap-classic/meta/snap.yaml
+++ b/tests/main/snapctl-is-connected-pid/test-snap-classic/meta/snap.yaml
@@ -5,9 +5,7 @@ summary: Classic test snap
 
 plugs:
   foo-plug:
-    interface: content
-    content: foo
-    target: $SNAP_COMMON/foo
+    interface: cups-control
 
 apps:
   svc:
