--- a/tests/main/snapctl-is-connected-pid/test-snap1/meta/snap.yaml
+++ b/tests/main/snapctl-is-connected-pid/test-snap1/meta/snap.yaml
@@ -4,16 +4,7 @@ summary: First test snap
 
 plugs:
   foo-plug:
-    interface: content
-    content: foo
-    target: $SNAP_COMMON/foo
-
-slots:
-  bar-slot:
-    interface: content
-    content: bar
-    read:
-      - $SNAP
+    interface: cups-control
 
 apps:
   svc:
