--- a/tests/main/snapctl-is-connected-pid/task.yaml
+++ b/tests/main/snapctl-is-connected-pid/task.yaml
@@ -36,27 +36,21 @@ execute: |
     }
 
     echo "Plugs and slots are initially disconnected"
-    not test-snap2.snapctl is-connected bar-plug
     not test-snap2.snapctl is-connected foo-slot
 
     echo "Disconnected interfaces are not connected to a snap process"
-    expect_status 1 test-snap2.snapctl is-connected --pid "$svc_pid" bar-plug
     expect_status 1 test-snap2.snapctl is-connected --pid "$svc_pid" foo-slot
 
     echo "Disconnected interfaces are not connected to non-snap process"
-    expect_status 10 test-snap2.snapctl is-connected --pid 1 bar-plug
     expect_status 10 test-snap2.snapctl is-connected --pid 1 foo-slot
 
-    echo "Connect interfaces"
+    echo "Connect interface"
     snap connect test-snap1:foo-plug test-snap2:foo-slot
-    snap connect test-snap2:bar-plug test-snap1:bar-slot
 
     echo "Connected interfaces report as connected to snap process"
-    test-snap2.snapctl is-connected --pid "$svc_pid" bar-plug
     test-snap2.snapctl is-connected --pid "$svc_pid" foo-slot
 
     echo "Interfaces still not connected to non-snap process"
-    expect_status 10 test-snap2.snapctl is-connected --pid 1 bar-plug
     expect_status 10 test-snap2.snapctl is-connected --pid 1 foo-slot
 
     # The remaining tests rely on classic confinement, so skip Ubuntu Core
