--- a/tests/main/snapctl-is-connected-pid/test-snap2/meta/snap.yaml
+++ b/tests/main/snapctl-is-connected-pid/test-snap2/meta/snap.yaml
@@ -2,18 +2,9 @@ name: test-snap2
 version: 1
 summary: Second test snap
 
-plugs:
-  bar-plug:
-    interface: content
-    content: bar
-    target: $SNAP_COMMON/bar
-
 slots:
   foo-slot:
-    interface: content
-    content: foo
-    read:
-      - $SNAP
+    interface: cups-control
 
 apps:
   snapctl:
