snap-confine: use exported snapd tools
WIP

Signed-off-by: Zygmunt Krynicki <me@zygoon.pl>

--- a/cmd/snap-confine/snap-confine.apparmor.in
+++ b/cmd/snap-confine/snap-confine.apparmor.in
@@ -1,7 +1,7 @@
 # Author: Jamie Strandboge <jamie@canonical.com>
 #include <tunables/global>
 
-@LIBEXECDIR@/snap-confine (attach_disconnected) {
+@LIBEXECDIR@/snap-confine (attach_disconnected, complain) {
     # Include any additional files that snapd chose to generate.
     # - for $HOME on NFS
     # - for $HOME on encrypted media
