--- a/tests/nested/core20/gadget-reseal/task.yaml
+++ b/tests/nested/core20/gadget-reseal/task.yaml
@@ -9,7 +9,7 @@ execute: |
     nested_exec sudo snap wait system seed.loaded
     SEALED_KEY_MTIME_1="$(nested_exec sudo stat --format="%Y" /run/mnt/ubuntu-seed/device/fde/ubuntu-data.sealed-key)"
     RESEAL_COUNT_1="$(nested_exec sudo cat /var/lib/snapd/device/fde/boot-chains | python3 -m json.tool | grep reseal-count|cut -f2 -d: | tr ',' ' ')"
-    # Install new (unasserted) gadget and wait for reboot/change finishing
+    # Install new (unasserted) gadget without changes and wait for change without reboot
     boot_id="$( nested_get_boot_id )"
     REMOTE_CHG_ID=$(nested_exec sudo snap install --dangerous /var/lib/snapd/snaps/pc_*.snap --no-wait)
     # no reboot here, no gadget changes
@@ -29,6 +29,7 @@ execute: |
     rm -rf pc-gadget
     snap download --basename=pc --channel="20/edge" pc
     unsquashfs -d pc-gadget pc.snap
+    # modify the recovery bootloader asset to change the hash and thus force a reseal
     echo " " >> pc-gadget/grub-recovery.conf
     # XXX: this needs a bump everytime we change the gadget, add code to
     #      do this automatically
