Simplify how the brand is obtained

--- a/tests/core/basic20/task.yaml
+++ b/tests/core/basic20/task.yaml
@@ -61,11 +61,9 @@ execute: |
     done
 
     # ensure the "snap recovery" command works
-    MODEL="$(snap model | grep '^model' | awk '{ print $2 }')"
-    BRAND="$(snap model | grep '^brand' | cut -d' ' -f2- | xargs)"
+    MODEL="$(snap model --verbose | grep '^model' | awk '{ print $2 }')"
+    BRAND="$(snap model --verbose | grep '^brand' | cut -d' ' -f2- | xargs)"
     if echo "$BRAND" | MATCH ".*\(.*\)"; then
         BRAND="$(echo $BRAND | cut -d '(' -f2 | cut -d ')' -f1)"
-    elif [ "$BRAND" = "Canonical*" ]; then
-        BRAND="canonical\*"
     fi
     snap recovery | MATCH "[0-9]+ +$BRAND +$MODEL +current"
