Update the check for brand
It is because there is not match for the brand from recovery and model,
I'll need to add some code to manually update that on the test.

google:ubuntu-core-20-64 .../tests/core/basic20# snap recovery --unicode
never
Label Brand Model Notes
20200915 canonical* ubuntu-core-20-amd64-dangerous current
google:ubuntu-core-20-64 .../tests/core/basic20# snap recovery --unicode
auto
Label Brand Model Notes
20200915 canonical✓ ubuntu-core-20-amd64-dangerous current
google:ubuntu-core-20-64 .../tests/core/basic20# snap recovery --unicode
always
Label Brand Model Notes
20200915 canonical✓ ubuntu-core-20-amd64-dangerous current

google:ubuntu-core-20-64 .../tests/core/basic20# snap model --verbose
brand-id: canonical
model: ubuntu-core-20-amd64-dangerous
serial: ee7845cb-ef5a-40b8-83d7-13654c74ec65
architecture: amd64
base: core20
timestamp: 2020-01-13
google:ubuntu-core-20-64 .../tests/core/basic20# snap model
brand Canonical✓
model ubuntu-core-20-amd64-dangerous
serial ee7845cb-ef5a-40b8-83d7-13654c74ec65

--- a/tests/core/basic20/task.yaml
+++ b/tests/core/basic20/task.yaml
@@ -63,4 +63,7 @@ execute: |
     # ensure the "snap recovery" command works
     MODEL="$(snap model --verbose | grep '^model' | awk '{ print $2 }')"
     BRAND="$(snap model --verbose | grep '^brand' | cut -d' ' -f2- | xargs)"
-    snap recovery | MATCH "[0-9]+ +$BRAND +$MODEL +current"
+    if [ "$BRAND" = "canonical" ]; then
+        BRAND="canonical\*"
+    fi
+    snap recovery --unicode=never | MATCH "[0-9]+ +$BRAND +$MODEL +current"
