Make a more generic check

--- a/tests/core/basic20/task.yaml
+++ b/tests/core/basic20/task.yaml
@@ -62,8 +62,8 @@ execute: |
 
     # ensure the "snap recovery" command works
     MODEL="$(snap model --verbose | grep '^model' | awk '{ print $2 }')"
-    BRAND="$(snap model --verbose | grep '^brand' | cut -d' ' -f2- | xargs)"
-    if [ "$BRAND" = "canonical" ]; then
-        BRAND="canonical\*"
+    BRAND_ID="$(snap model --verbose | grep '^brand-id:' | awk '{print $2}')"
+    if [ "$(snap known account "username=$BRAND_ID" | grep '^validation:' | awk '{print $2}')" != "unproven" ]; then
+        BRAND_ID="$BRAND_ID\*"
     fi
-    snap recovery --unicode=never | MATCH "[0-9]+ +$BRAND +$MODEL +current"
+    snap recovery --unicode=never | MATCH "[0-9]+ +$BRAND_ID +$MODEL +current"
