spread.yaml: add nested vm snapd logs to all nested debug runs
Sometimes we see situations where the snapd inside the VM is not responding or
otherwise seems broken, so if a test fails we should try to peek at the status
of snapd in the VM too.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/spread.yaml
+++ b/spread.yaml
@@ -407,12 +407,14 @@ debug-each: |
         if nested_is_nested_system; then
             echo '# nested VM status'
             systemctl status nested-vm || true
-            journalctl -e --no-pager -u nested-vm || true
+            journalctl --no-pager -u nested-vm || true
 
             if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
                 echo '# nested VM serial boot log'
                 cat "${NESTED_LOGS_DIR}/serial.log"
             fi
+
+            nested_exec journalctl --no-pager -u snapd || true
         fi
 
         echo '# journal messages for snapd'
