spread.yaml: need to use sudo to read journals on core VM's for debug
Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/spread.yaml
+++ b/spread.yaml
@@ -414,7 +414,7 @@ debug-each: |
                 cat "${NESTED_LOGS_DIR}/serial.log"
             fi
 
-            nested_exec journalctl --no-pager -u snapd || true
+            nested_exec sudo journalctl --no-pager -u snapd || true
         fi
 
         echo '# journal messages for snapd'
