snap: add new `snap debug show-recovery-key` command
This command shows the recovery key in a format that is suitable
for the secboot.ParseRecoveryKey() helper that is used to unlock
the disk in a desaster recovery scenario.

This command is intended to be used by console-conf or similar
tools to give the user a chance to write down the recovery key.

--- a/tests/nested/core20/basic/task.yaml
+++ b/tests/nested/core20/basic/task.yaml
@@ -31,3 +31,8 @@ execute: |
 
     echo "Ensure 'snap list' works and test-snapd-sh snap is removed"
     ! nested_exec "snap list test-snapd-sh"
+
+    echo "Ensure 'snap debug show-recovery-key' works as root"
+    nested_exec "sudo snap debug show-recovery-key" | MATCH '[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}-[0-9]{5}'
+    echo "But not as user (normal file permissions prevent this)"
+    ! nested_exec "snap debug show-recovery-key"
