--- a/tests/main/lxd/task.yaml
+++ b/tests/main/lxd/task.yaml
@@ -43,11 +43,6 @@ restore: |
         exit
     fi
 
-    if [ "$SPREAD_SYSTEM" = "ubuntu-16.04-64" ] && [ "$REFRESH_APP_AWARENESS_OUTER" = false ] && [ "$REFRESH_APP_AWARENESS_INNER" = true ]; then
-        echo "Not running old xenial combination which lacks proper patches"
-        exit 0
-    fi
-
     for cont_name in my-nesting-ubuntu my-ubuntu; do
         lxd.lxc stop $cont_name --force || true
         lxd.lxc delete $cont_name || true
@@ -73,11 +68,6 @@ execute: |
     if  [[ "$(find "$GOHOME" -name 'snapd_*.deb' | wc -l || echo 0)" -eq 0 ]]; then
         echo "No run lxd test when there are not .deb files built"
         exit
-    fi
-
-    if [ "$SPREAD_SYSTEM" = "ubuntu-16.04-64" ] && [ "$REFRESH_APP_AWARENESS_OUTER" = false ] && [ "$REFRESH_APP_AWARENESS_INNER" = true ]; then
-        echo "Not running old xenial combination which lacks proper patches"
-        exit 0
     fi
 
     echo "Install lxd"
@@ -155,7 +145,13 @@ execute: |
     lxd.lxc exec my-ubuntu -- find /var/run/systemd/generator/ -name container.conf | MATCH "/var/run/systemd/generator/snap-core-.*mount.d/container.conf"
     lxd.lxc exec my-ubuntu -- test -f /var/run/systemd/generator/snap.mount
 
-    # Ensure that we can run lxd as a snap inside a nested container
+    # Ensure that we can run lxd as a snap inside a container to create a nested
+    # container
+
+    if [ "$SPREAD_SYSTEM" = "ubuntu-16.04-64" ] && [ "$REFRESH_APP_AWARENESS_OUTER" = false ] && [ "$REFRESH_APP_AWARENESS_INNER" = true ]; then
+        echo "Not running old xenial combination which lacks proper patches"
+        exit 0
+    fi
 
     echo "Ensure we can use lxd as a snap inside lxd"
     lxd.lxc exec my-nesting-ubuntu -- apt autoremove -y lxd
