--- a/tests/main/exported-tools/task.yaml
+++ b/tests/main/exported-tools/task.yaml
@@ -14,6 +14,11 @@ execute: |
     fi
     echo "SNAP_REEXEC=$SNAP_REEXEC"
 
+    if [[ $SPREAD_SYSTEM =~ ubuntu-core-* ]] && [ "$SNAP_REEXEC" = 0 ]; then
+        echo "disabling re-execution on core is not supported"
+        exit 0
+    fi
+
     # shellcheck source=tests/lib/dirs.sh
     . "$TESTSLIB"/dirs.sh
 
