--- a/spread.yaml
+++ b/spread.yaml
@@ -215,6 +215,9 @@ backends:
             - ubuntu-20.04-32:
                   username: ubuntu
                   password: ubuntu
+            - ubuntu-20.10-64:
+                  username: ubuntu
+                  password: ubuntu
             - debian-sid-64:
                   username: debian
                   password: debian
