--- a/tests/nested/classic/hotplug/task.yaml
+++ b/tests/nested/classic/hotplug/task.yaml
@@ -31,6 +31,7 @@ debug: |
     nested_exec "snap list"
     nested_exec "dmesg"
     nested_exec 'sudo jq -r ".data[\"hotplug-slots\"]" /var/lib/snapd/state.json'
+    set -e
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
