spread.yaml: add newline to separate output of nested log from bash trace
This makes the failure logs more readable, see for example this failure:

2020-09-22T21:39:17.2757327Z [  137.044741] snapd[1240]: 2020/09/22 21:26:38.473638 main.go:155: Exiting on terminated signal.
2020-09-22T21:39:17.2757956Z [  137.059652] sshd[837]: Received signal 15; terminating.
2020-09-22T21:39:17.2758369Z [  137.081683] systemd[1]: Stopped Execute cloud user/final scripts.
2020-09-22T21:39:17.2759449Z [  137.106471] systemd[1]: Stopped target Multi-User System.+ nested_exec sudo journalctl --no-pager -u snapd
2020-09-22T21:39:17.2760645Z + sshpass -p ubuntu ssh -p 8022 -o ConnectTimeout=10 -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no user1@localhost sudo journalctl --no-pager -u snapd
2020-09-22T21:39:17.2761630Z ssh: connect to host localhost port 8022: Connection refused
2020-09-22T21:39:17.2761965Z + true


The "+ nested_exec ..." should have been on a new line, otherwise it looks like 
the sshpass command is part of the serial log from the lines above.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/spread.yaml
+++ b/spread.yaml
@@ -416,6 +416,8 @@ debug-each: |
             if [ -f "${NESTED_LOGS_DIR}/serial.log" ]; then
                 echo '# nested VM serial boot log'
                 cat "${NESTED_LOGS_DIR}/serial.log"
+                # add another echo in case the serial log is missing a newline
+                echo
             fi
 
             nested_exec sudo journalctl --no-pager -u snapd || true
