--- a/cmd/snap-confine/snap-confine.apparmor.in
+++ b/cmd/snap-confine/snap-confine.apparmor.in
@@ -86,7 +86,7 @@
     # changing profile
     @{PROC}/[0-9]*/attr/exec w,
     # Reading current profile
-    @{PROC}/[0-9]*/attr/current r,
+    @{PROC}/[0-9]*/attr/{,apparmor/}current r,
     # Reading available filesystems
     @{PROC}/filesystems r,
 
@@ -426,7 +426,7 @@
     /var/lib/snapd/cookie/snap.* r,
 
     # For aa_change_hat() to go into ^mount-namespace-capture-helper
-    @{PROC}/[0-9]*/attr/current w,
+    @{PROC}/[0-9]*/attr/{,apparmor/}current w,
 
     # As a special exception allow snap-confine to write to anything in /var/lib.
     # This code should be changed to allow delegation so that snap-confine can
