snap-confine,interfaces/docker-support: allow /attr/apparmor/exec too
In addition to using /proc/<pid>/attr/apparmor/current for the profile label, we
now should also allow for writing to /proc/<pid>/attr/apparmor/exec too in place
of the existing /proc/<pid>/attr/exec file, as new libapparmor's and kernels
will use this new path.

Signed-off-by: Ian Johnson <ian.johnson@canonical.com>

--- a/cmd/snap-confine/snap-confine.apparmor.in
+++ b/cmd/snap-confine/snap-confine.apparmor.in
@@ -84,7 +84,7 @@
     capability setgid,
 
     # changing profile
-    @{PROC}/[0-9]*/attr/exec w,
+    @{PROC}/[0-9]*/attr/{,apparmor/}exec w,
     # Reading current profile
     @{PROC}/[0-9]*/attr/{,apparmor/}current r,
     # Reading available filesystems
