New make_snap which checks on snap.yaml the name

--- a/tests/main/snaps-state/task.yaml
+++ b/tests/main/snaps-state/task.yaml
@@ -69,7 +69,7 @@ execute: |
     # Make and install a snap by using the install-local subcommand with --classic
     if "$TESTSTOOLS"/snaps-state is-classic-confinement-supported; then
         snap_path=$("$TESTSTOOLS"/snaps-state install-local "$SNAP_CLASSIC" --classic)
-        snap list "$SNAP_CLASSIC" | MATCH classic$
+        snap list "$SNAP_CLASSIC" | MATCH 'classic$'
         snap remove "$SNAP_CLASSIC"
         rm -f "$TESTSLIB/snaps/${SNAP_CLASSIC}/${SNAP_CLASSIC}_1.0_all.snap"
     fi
@@ -77,7 +77,7 @@ execute: |
     # Make and install a snap by using the install-local subcommand with --jailmode
     if [ "$(snap debug confinement)" = strict ] ; then
         snap_path=$("$TESTSTOOLS"/snaps-state install-local "$SNAP_JAILMODE" --jailmode)
-        snap list "$SNAP_JAILMODE" | MATCH "jailmode$"
+        snap list "$SNAP_JAILMODE" | MATCH 'jailmode$'
         snap remove "$SNAP_JAILMODE"
         rm -f "$TESTSLIB/snaps/${SNAP_JAILMODE}/${SNAP_JAILMODE}_1.0_all.snap"
     fi
