--- a/tests/main/snaps-state/task.yaml
+++ b/tests/main/snaps-state/task.yaml
@@ -59,15 +59,8 @@ execute: |
     snap remove "$SNAP_DEVMODE"
     rm -f "$TESTSLIB/snaps/${SNAP_DEVMODE}/${SNAP_DEVMODE}_1.0_all.snap"
 
-    # check the command is-classic-confinement-supported works
-    if [[ "$SPREAD_SYSTEM" == fedora-* ]]; then
-        not "$TESTSTOOLS"/snaps-state is-classic-confinement-supported
-    elif [[ "$SPREAD_SYSTEM" == ubuntu-1* ]]; then
-        "$TESTSTOOLS"/snaps-state is-classic-confinement-supported
-    fi
-
     # Make and install a snap by using the install-local subcommand with --classic
-    if "$TESTSTOOLS"/snaps-state is-classic-confinement-supported; then
+    if snap debug sandbox-features --required=confinement-options:classic; then
         snap_path=$("$TESTSTOOLS"/snaps-state install-local "$SNAP_CLASSIC" --classic)
         snap list "$SNAP_CLASSIC" | MATCH 'classic$'
         snap remove "$SNAP_CLASSIC"
