tests/core/snap-debug-bootvars: also check snap_mode
Also check that snap_mode is unset in a non-update scenario.

Signed-off-by: Maciej Borzecki <maciej.zenon.borzecki@canonical.com>

--- a/tests/core/snap-debug-bootvars/task.yaml
+++ b/tests/core/snap-debug-bootvars/task.yaml
@@ -36,4 +36,6 @@ execute: |
     else
         MATCH 'snap_core=core.*\.snap' < default.out
         MATCH 'snap_kernel=pc-kernel.*\.snap' < default.out
+        # relevant snaps are not being updated, so snap_mode is unset
+        MATCH 'snap_mode=$' < default.out
     fi
