--- a/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-nocloud-not-vuln/task.yaml
@@ -26,12 +26,11 @@ prepare: |
     # second boot - attacker drive
     nested_build_seed_cdrom "$TESTSLIB/cloud-init-seeds/attacker-user" seed2.iso cidata user-data meta-data
 
+    "$TESTSTOOLS"/nested-state create-core-vm
+
     # first boot uses seed1 to create the normal-user in addition to the 
     # system-user assertion
-    NESTED_PARAM_CD="-cdrom $(pwd)/seed.iso"
-
-    nested_create_core_vm
-    nested_start_core_vm
+    "$TESTSTOOLS"/nested-state start-core-vm --param-cd "-cdrom $(pwd)/seed.iso"
 
 debug: |
     if [ -f snapd-before-reboot.logs ]; then
@@ -127,7 +126,7 @@ execute: |
     mv seed2.iso seed.iso
 
     echo "Restarting nested VM with attacker cloud-init CD-ROM drive"
-    nested_force_start_vm
+    "$TESTSTOOLS"/nested-state force-start-vm
     nested_wait_for_reboot "${boot_id}"
 
     # cloud-init will actually still run because it was not disabled and we
