--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -25,7 +25,7 @@ prepare: |
   dpkg -i "$SPREAD_PATH"/../snapd_*.deb
 
   # create a VM and mount a cloud image
-  nested_create_classic_vm
+  "$TESTSTOOLS"/nested-state create-classic-vm
   mkdir -p "$IMAGE_MOUNTPOINT"
   IMAGE_NAME=$(nested_get_image_name classic)
   mount_ubuntu_image "$NESTED_IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
@@ -46,9 +46,7 @@ prepare: |
   SNAPD_DEBUG=1 /usr/lib/snapd/snap-preseed --reset "$IMAGE_MOUNTPOINT"
 
 restore: |
-  #shellcheck source=tests/lib/nested.sh
-  . "$TESTSLIB/nested.sh"
-  nested_destroy_vm
+  "$TESTSTOOLS"/nested-state destroy-vm
 
   # any of the restore commands can fail depending on where execute part stopped,
   # account for that with ||true.
@@ -75,9 +73,10 @@ execute: |
   . "$TESTSLIB/preseed.sh"
   umount_ubuntu_image "$IMAGE_MOUNTPOINT"
 
+  "$TESTSTOOLS"/nested-state start-classic-vm
+
   #shellcheck source=tests/lib/nested.sh
   . "$TESTSLIB/nested.sh"
-  nested_start_classic_vm
 
   echo "Waiting for firstboot seeding to finish"
   nested_exec "sudo snap wait system seed.loaded"
