--- a/tests/nested/manual/refresh-revert-fundamentals/task.yaml
+++ b/tests/nested/manual/refresh-revert-fundamentals/task.yaml
@@ -39,8 +39,8 @@ prepare: |
         exit
     fi
 
-    nested_create_core_vm
-    nested_start_core_vm
+    "$TESTSTOOLS"/nested-state create-core-vm
+    "$TESTSTOOLS"/nested-state start-core-vm
 
 restore: |
     if [ -f skip.test ]; then
