--- a/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
+++ b/tests/nested/manual/cloud-init-never-used-not-vuln/task.yaml
@@ -23,11 +23,11 @@ prepare: |
     # build the attacker cloud-init NoCloud cdrom drive
     nested_build_seed_cdrom "$TESTSLIB/cloud-init-seeds/attacker-user" seed2.iso cidata user-data meta-data
 
-    "$TESTSTOOLS"/nested-state create-core-vm
+    "$TESTSTOOLS"/nested-state build-core-image
 
     # first boot will use seed1 which is empty, but the same file name will be 
     # replace while the VM is shutdown to use the second attacker iso
-    "$TESTSTOOLS"/nested-state start-core-vm --param-cd "-cdrom $(pwd)/seed.iso"
+    "$TESTSTOOLS"/nested-state start-new-core-vm --param-cd "-cdrom $(pwd)/seed.iso"
 
 debug: |
     if [ -f snapd-before-reboot.logs ]; then
@@ -111,13 +111,13 @@ execute: |
     # gracefully shutdown so that we don't have file corruption
     echo "Gracefully shutting down the nested VM to prepare a simulated attack"
     boot_id="$(nested_get_boot_id)"
-    nested_shutdown
+    "$TESTSTOOLS"/nested-state shutdown-existing-vm
 
     # replace the empty seed.iso with the new attacker iso
     mv seed2.iso seed.iso
 
     echo "Restarting nested VM with attacker cloud-init CD-ROM drive"
-    "$TESTSTOOLS"/nested-state force-start-vm
+    "$TESTSTOOLS"/nested-state start-existing-vm
     nested_wait_for_reboot "${boot_id}"
 
     # cloud-init should not actually run, since it was disabled, but in case the
