--- a/tests/nested/manual/core-early-config/task.yaml
+++ b/tests/nested/manual/core-early-config/task.yaml
@@ -28,7 +28,7 @@ prepare: |
     KERNEL_SNAP=$(ls pc-kernel_*.snap)
     mv "$KERNEL_SNAP" extra-snaps/
 
-    "$TESTSTOOLS"/nested-state create-core-vm
+    "$TESTSTOOLS"/nested-state build-core-image
 
     # Modify seed to use devmode for pc gadget snap. This is needed for the
     # install hook to have access to /etc/systemd. Ideally we would use
@@ -43,7 +43,7 @@ prepare: |
     kpartx -d "$NESTED_IMAGES_DIR/$IMAGE_NAME"
     rmdir "$tmp"
 
-    "$TESTSTOOLS"/nested-state start-core-vm
+    "$TESTSTOOLS"/nested-state start-new-core-vm
 
 execute: |
     #shellcheck source=tests/lib/nested.sh
