--- a/tests/nested/manual/preseed/task.yaml
+++ b/tests/nested/manual/preseed/task.yaml
@@ -25,7 +25,7 @@ prepare: |
   dpkg -i "$SPREAD_PATH"/../snapd_*.deb
 
   # create a VM and mount a cloud image
-  "$TESTSTOOLS"/nested-state create-classic-vm
+  "$TESTSTOOLS"/nested-state build-classic-image
   mkdir -p "$IMAGE_MOUNTPOINT"
   IMAGE_NAME=$(nested_get_image_name classic)
   mount_ubuntu_image "$NESTED_IMAGES_DIR/$IMAGE_NAME" "$IMAGE_MOUNTPOINT"
@@ -73,7 +73,7 @@ execute: |
   . "$TESTSLIB/preseed.sh"
   umount_ubuntu_image "$IMAGE_MOUNTPOINT"
 
-  "$TESTSTOOLS"/nested-state start-classic-vm
+  "$TESTSTOOLS"/nested-state start-new-classic-vm
 
   #shellcheck source=tests/lib/nested.sh
   . "$TESTSLIB/nested.sh"
